--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ex1VM)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(ex1VM vector3d_tests.cpp Vector3D.cpp Vector3D.h Matrix3D.cpp Matrix3D.h)
+add_executable(ex1VM tester.cpp Vector3D.cpp Vector3D.h Matrix3D.cpp Matrix3D.h)
